--- a/aula3-site-modificado.html
+++ b/aula3-site-modificado.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" type="text/css" href="aula3-original-css.css">
+      <link rel="stylesheet" type="text/css" href="aula3-modificado-css.cs">
   
   </head>
   <body id="weather-background" class="default-weather">
